Fix wrapping for all data values inside grid

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ header {
     font-weight: 500;
     text-align: right;
     flex: 1;
+    word-break: break-all;
 }
 
 .btn-edit {
